@@ -582,6 +582,7 @@ SOURCES =
 	escape_string
 	string_util
 	file
+	fingerprint
 	gzip
 	hasher
 	hex
