@@ -38,90 +38,61 @@ POSSIBILITY OF SUCH DAMAGE.
 
 #include "libtorrent/config.hpp"
 #include "libtorrent/peer_id.hpp"
-#include "libtorrent/assert.hpp"
 #include "libtorrent/export.hpp"
 
 namespace libtorrent
 {
 
+	// This is a utility function to produce a client ID fingerprint formatted to
+	// the most common convention.
+	// 
+	// The name string should contain exactly two characters. These are the
+	// characters unique to your client, used to identify it. Make sure not to
+	// clash with anybody else. Here are some taken id's:
+	// 
+	// +----------+-----------------------+
+	// | id chars | client                |
+	// +==========+=======================+
+	// | 'AZ'     | Azureus               |
+	// +----------+-----------------------+
+	// | 'LT'     | libtorrent (default)  |
+	// +----------+-----------------------+
+	// | 'BX'     | BittorrentX           |
+	// +----------+-----------------------+
+	// | 'MT'     | Moonlight Torrent     |
+	// +----------+-----------------------+
+	// | 'TS'     | Torrent Storm         |
+	// +----------+-----------------------+
+	// | 'SS'     | Swarm Scope           |
+	// +----------+-----------------------+
+	// | 'XT'     | Xan Torrent           |
+	// +----------+-----------------------+
+	// 
+	// There's an informal directory of client id's here_.
+	// 
+	// .. _here: http://wiki.theory.org/BitTorrentSpecification#peer_id
+	//
+	// The ``major``, ``minor``, ``revision`` and ``tag`` parameters are used to
+	// identify the version of your client.
+	TORRENT_EXPORT std::string generate_fingerprint(std::string name
+		, int major, int minor = 0, int revision = 0, int tag = 0);
+
 	// The fingerprint class represents information about a client and its version. It is used
 	// to encode this information into the client's peer id.
-	struct TORRENT_DEPRECATED_EXPORT fingerprint
+	struct TORRENT_DEPRECATED TORRENT_DEPRECATED_EXPORT fingerprint
 	{
+		fingerprint(const char* id_string, int major, int minor, int revision, int tag);
 
-		// The constructor takes a ``char const*`` that should point to a string constant containing
-		// exactly two characters. These are the characters that should be unique for your client. Make
-		// sure not to clash with anybody else. Here are some taken id's:
-		// 
-		// +----------+-----------------------+
-		// | id chars | client                |
-		// +==========+=======================+
-		// | 'AZ'     | Azureus               |
-		// +----------+-----------------------+
-		// | 'LT'     | libtorrent (default)  |
-		// +----------+-----------------------+
-		// | 'BX'     | BittorrentX           |
-		// +----------+-----------------------+
-		// | 'MT'     | Moonlight Torrent     |
-		// +----------+-----------------------+
-		// | 'TS'     | Torrent Storm         |
-		// +----------+-----------------------+
-		// | 'SS'     | Swarm Scope           |
-		// +----------+-----------------------+
-		// | 'XT'     | Xan Torrent           |
-		// +----------+-----------------------+
-		// 
-		// There's an informal directory of client id's here_.
-		// 
-		// .. _here: http://wiki.theory.org/BitTorrentSpecification#peer_id
-		//
-		// The ``major``, ``minor``, ``revision`` and ``tag`` parameters are used to identify the
-		// version of your client.
-		fingerprint(const char* id_string, int major, int minor, int revision, int tag)
-			: major_version(major)
-			, minor_version(minor)
-			, revision_version(revision)
-			, tag_version(tag)
-		{
-			TORRENT_ASSERT(id_string);
-			TORRENT_ASSERT(major >= 0);
-			TORRENT_ASSERT(minor >= 0);
-			TORRENT_ASSERT(revision >= 0);
-			TORRENT_ASSERT(tag >= 0);
-			TORRENT_ASSERT(std::strlen(id_string) == 2);
-			name[0] = id_string[0];
-			name[1] = id_string[1];
-		}
-
+#ifndef TORRENT_NO_DEPRECATE
 		// generates the actual string put in the peer-id, and return it.
-		std::string to_string() const
-		{
-			char s[100];
-			snprintf(s, 100, "-%c%c%c%c%c%c-"
-				, name[0], name[1]
-				, version_to_char(major_version)
-				, version_to_char(minor_version)
-				, version_to_char(revision_version)
-				, version_to_char(tag_version));
-			return s;
-		}
+		std::string to_string() const;
+#endif
 
 		char name[2];
 		int major_version;
 		int minor_version;
 		int revision_version;
 		int tag_version;
-
-	private:
-
-		char version_to_char(int v) const
-		{
-			if (v >= 0 && v < 10) return char('0' + v);
-			else if (v >= 10) return char('A' + (v - 10));
-			TORRENT_ASSERT(false);
-			return '0';
-		}
-
 	};
 
 }
