@@ -1,3 +1,4 @@
+	* add utility function for generating peer ID fingerprint
 	* fix bug in last-seen-complete
 	* remove file size limit in torrent_info filename constructor
 	* fix tail-padding for last file in create_torrent
